@@ -1,0 +1,1 @@
+Improve IDLE run crash error message (which users should never see).
